<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageCaptureActivity"
    android:background="#E6F5FF" >

    <TextView
        android:id="@+id/lblActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/lblActivityTitle" />

    <Button
        android:id="@+id/btnOpenGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblActivityTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="onImageGalleryClick"
        android:text="@string/lblOpenGallery" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnOpenGallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="onTakeAPhotoClicked"
        android:text="@string/lblTakePhoto" />

</RelativeLayout>
